Add docs swagger to the endpoints main
